Created page with "<center> <gallery widths="300" heights="200"> Image:FCCircularText 02.png|Text beginnt bei 180 Grad ('''Begin angle''') und endet bei 360 Grad ('''End angle''') auf der äußeren Kurve. Image:FCCircularText 03.png|Text auf der inneren Kurve. </gallery> </center> <br /> <center> <gallery widths="300" heights="200"> Image:FCCircularText 04.png|Runder Text auf internen und externen Kurven. Image:FCCircularText 05.png|Runder Text auf einem kreisförmigen Objekt. </gallery> <..."

--- a/wiki/de/Macro_FCCircularText.html
+++ b/wiki/de/Macro_FCCircularText.html
@@ -1,5 +1,5 @@
 <link href="../site.css" rel="stylesheet" type="text/css"/><div class="mw-page-container"><h1 id="firstHeading" class="firstHeading mw-first-heading"><span class="mw-page-title-main">Macro FCCircularText/de</span></h1><?xml encoding="UTF-8"><div class="mw-content-ltr mw-parser-output" lang="de" dir="ltr"><div class="mw-pt-languages noprint navigation-not-searchable" lang="en" dir="ltr"><div class="mw-pt-languages-label">Other languages:</div><ul class="mw-pt-languages-list"><li><a href="../index.php?title=Special;Translate&amp;group=page-Macro+FCCircularText&amp;language=&amp;task=view.html" class="new" title="Start translation for this language" lang="" dir="ltr"></a></li>
-<li><span class="mw-pt-languages-selected mw-pt-progress mw-pt-progress--high" lang="de" dir="ltr">Deutsch</span></li>
+<li><span class="mw-pt-languages-selected mw-pt-progress mw-pt-progress--complete" lang="de" dir="ltr">Deutsch</span></li>
 <li><a href="../Macro_FCCircularText.html" class="mw-pt-languages-ui mw-pt-progress mw-pt-progress--complete" title="Macro FCCircularText (100% translated)" lang="en" dir="ltr">English</a></li>
 <li><a href="../es/Macro_FCCircularText.html" class="mw-pt-progress mw-pt-progress--med" title="Macro FCCircularText/es (33% translated)" lang="es" dir="ltr">espa&ntilde;ol</a></li>
 <li><a href="../fr/Macro_FCCircularText.html" class="mw-pt-progress mw-pt-progress--complete" title="Macro CircularText (100% translated)" lang="fr" dir="ltr">fran&ccedil;ais</a></li>
@@ -477,16 +477,15 @@ Wenn der Befehl in der ausgew&auml;hlten Option nicht verwendet wird, wird er au
 </p><p><span id="Examples"></span>
 </p>
 <h2><span class="mw-headline" id="Beispiele">Beispiele</span></h2>
-<div lang="en" dir="ltr" class="mw-content-ltr">
 <center>
 <ul class="gallery mw-gallery-traditional">
 		<li class="gallerybox" style="width: 335px">
-			<div class="thumb" style="width: 330px; height: 230px;"><span typeof="mw:File"><a href="../index.php?title=FCCircularText_02.png&amp;filetimestamp=20140820192209&amp;.html" class="mw-file-description" title="Text beginning at 180 degrees (Begin angle) end at 360 degrees (End angle) external curve."><img alt="Text beginning at 180 degrees (Begin angle) end at 360 degrees (End angle) external curve." src="../File/FCCircularText_02.png" decoding="async" width="275" height="200" class="mw-file-element" data-file-width="534" data-file-height="389"></a></span></div>
-			<div class="gallerytext">Text beginning at 180 degrees (<b>Begin angle</b>) end at 360 degrees (<b>End angle</b>) external curve.</div>
+			<div class="thumb" style="width: 330px; height: 230px;"><span typeof="mw:File"><a href="../index.php?title=FCCircularText_02.png&amp;filetimestamp=20140820192209&amp;.html" class="mw-file-description" title="Text beginnt bei 180 Grad (Begin angle) und endet bei 360 Grad (End angle) auf der &auml;u&szlig;eren Kurve."><img alt="Text beginnt bei 180 Grad (Begin angle) und endet bei 360 Grad (End angle) auf der &auml;u&szlig;eren Kurve." src="../File/FCCircularText_02.png" decoding="async" width="275" height="200" class="mw-file-element" data-file-width="534" data-file-height="389"></a></span></div>
+			<div class="gallerytext">Text beginnt bei 180 Grad (<b>Begin angle</b>) und endet bei 360 Grad (<b>End angle</b>) auf der &auml;u&szlig;eren Kurve.</div>
 		</li>
 		<li class="gallerybox" style="width: 335px">
-			<div class="thumb" style="width: 330px; height: 230px;"><span typeof="mw:File"><a href="../index.php?title=FCCircularText_03.png&amp;filetimestamp=20140825210343&amp;.html" class="mw-file-description" title="Text set in an inner curve."><img alt="Text set in an inner curve." src="../File/FCCircularText_03.png" decoding="async" width="254" height="200" class="mw-file-element" data-file-width="531" data-file-height="419"></a></span></div>
-			<div class="gallerytext">Text set in an inner curve.</div>
+			<div class="thumb" style="width: 330px; height: 230px;"><span typeof="mw:File"><a href="../index.php?title=FCCircularText_03.png&amp;filetimestamp=20140825210343&amp;.html" class="mw-file-description" title="Text auf der inneren Kurve."><img alt="Text auf der inneren Kurve." src="../File/FCCircularText_03.png" decoding="async" width="254" height="200" class="mw-file-element" data-file-width="531" data-file-height="419"></a></span></div>
+			<div class="gallerytext">Text auf der inneren Kurve.</div>
 		</li>
 </ul>
 </center>
@@ -495,12 +494,12 @@ Wenn der Befehl in der ausgew&auml;hlten Option nicht verwendet wird, wird er au
 <center>
 <ul class="gallery mw-gallery-traditional">
 		<li class="gallerybox" style="width: 335px">
-			<div class="thumb" style="width: 330px; height: 230px;"><span typeof="mw:File"><a href="../index.php?title=FCCircularText_04.png&amp;filetimestamp=20140826200510&amp;.html" class="mw-file-description" title="Text circular on internal and external curve."><img alt="Text circular on internal and external curve." src="../File/FCCircularText_04.png" decoding="async" width="265" height="200" class="mw-file-element" data-file-width="576" data-file-height="435"></a></span></div>
-			<div class="gallerytext">Text circular on internal and external curve.</div>
+			<div class="thumb" style="width: 330px; height: 230px;"><span typeof="mw:File"><a href="../index.php?title=FCCircularText_04.png&amp;filetimestamp=20140826200510&amp;.html" class="mw-file-description" title="Runder Text auf internen und externen Kurven."><img alt="Runder Text auf internen und externen Kurven." src="../File/FCCircularText_04.png" decoding="async" width="265" height="200" class="mw-file-element" data-file-width="576" data-file-height="435"></a></span></div>
+			<div class="gallerytext">Runder Text auf internen und externen Kurven.</div>
 		</li>
 		<li class="gallerybox" style="width: 335px">
-			<div class="thumb" style="width: 330px; height: 230px;"><span typeof="mw:File"><a href="../index.php?title=FCCircularText_05.png&amp;filetimestamp=20140826200621&amp;.html" class="mw-file-description" title="Circular text on a flat onbjet."><img alt="Circular text on a flat onbjet." src="../File/FCCircularText_05.png" decoding="async" width="252" height="200" class="mw-file-element" data-file-width="640" data-file-height="509"></a></span></div>
-			<div class="gallerytext">Circular text on a flat onbjet.</div>
+			<div class="thumb" style="width: 330px; height: 230px;"><span typeof="mw:File"><a href="../index.php?title=FCCircularText_05.png&amp;filetimestamp=20140826200621&amp;.html" class="mw-file-description" title="Runder Text auf einem kreisf&ouml;rmigen Objekt."><img alt="Runder Text auf einem kreisf&ouml;rmigen Objekt." src="../File/FCCircularText_05.png" decoding="async" width="252" height="200" class="mw-file-element" data-file-width="640" data-file-height="509"></a></span></div>
+			<div class="gallerytext">Runder Text auf einem kreisf&ouml;rmigen Objekt.</div>
 		</li>
 </ul>
 </center>
@@ -509,19 +508,17 @@ Wenn der Befehl in der ausgew&auml;hlten Option nicht verwendet wird, wird er au
 <center>
 <ul class="gallery mw-gallery-traditional">
 		<li class="gallerybox" style="width: 335px">
-			<div class="thumb" style="width: 330px; height: 230px;"><span typeof="mw:File"><a href="../index.php?title=FCCircularText_IndoorFlat_01.png&amp;filetimestamp=20200817092947&amp;.html" class="mw-file-description" title="Configuration Superior.(click to elarge)"><img alt="Configuration Superior.(click to elarge)" src="../File/FCCircularText_IndoorFlat_01.png" decoding="async" width="300" height="156" class="mw-file-element" data-file-width="924" data-file-height="482"></a></span></div>
-			<div class="gallerytext">Configuration Superior.(click to elarge)</div>
+			<div class="thumb" style="width: 330px; height: 230px;"><span typeof="mw:File"><a href="../index.php?title=FCCircularText_IndoorFlat_01.png&amp;filetimestamp=20200817092947&amp;.html" class="mw-file-description" title="Konfiguration h&ouml;herwertig. (Zum Vergr&ouml;&szlig;ern bitte anklicken)"><img alt="Konfiguration h&ouml;herwertig. (Zum Vergr&ouml;&szlig;ern bitte anklicken)" src="../File/FCCircularText_IndoorFlat_01.png" decoding="async" width="300" height="156" class="mw-file-element" data-file-width="924" data-file-height="482"></a></span></div>
+			<div class="gallerytext">Konfiguration h&ouml;herwertig. (Zum Vergr&ouml;&szlig;ern bitte anklicken)</div>
 		</li>
 		<li class="gallerybox" style="width: 335px">
-			<div class="thumb" style="width: 330px; height: 230px;"><span typeof="mw:File"><a href="../index.php?title=FCCircularText_IndoorFlat_02.png&amp;filetimestamp=20200817093042&amp;.html" class="mw-file-description" title="Configuration Inferior.(click to elarge)"><img alt="Configuration Inferior.(click to elarge)" src="../File/FCCircularText_IndoorFlat_02.png" decoding="async" width="300" height="157" class="mw-file-element" data-file-width="927" data-file-height="485"></a></span></div>
-			<div class="gallerytext">Configuration Inferior.(click to elarge)</div>
+			<div class="thumb" style="width: 330px; height: 230px;"><span typeof="mw:File"><a href="../index.php?title=FCCircularText_IndoorFlat_02.png&amp;filetimestamp=20200817093042&amp;.html" class="mw-file-description" title="Konfiguration minderwertig. (Zum Vergr&ouml;&szlig;ern bitte anklicken.)"><img alt="Konfiguration minderwertig. (Zum Vergr&ouml;&szlig;ern bitte anklicken.)" src="../File/FCCircularText_IndoorFlat_02.png" decoding="async" width="300" height="157" class="mw-file-element" data-file-width="927" data-file-height="485"></a></span></div>
+			<div class="gallerytext">Konfiguration minderwertig. (Zum Vergr&ouml;&szlig;ern bitte anklicken.)</div>
 		</li>
 </ul>
 </center>
 <p><br>
-</p>
-</div>
-<p><br>
+</p><p><br>
 </p>
 <center>
 <ul class="gallery mw-gallery-traditional">
@@ -952,35 +949,35 @@ Modusentlastung:
     </div></div>
 <!-- 
 NewPP limit report
-Cached time: 20260121044254
+Cached time: 20260121044519
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.438 seconds
-Real time usage: 1.298 seconds
-Preprocessor visited node count: 1586/1000000
+CPU time usage: 0.446 seconds
+Real time usage: 0.594 seconds
+Preprocessor visited node count: 1585/1000000
 Post&#8208;expand include size: 41112/2097152 bytes
 Template argument size: 12832/2097152 bytes
 Highest expansion depth: 6/100
 Expensive parser function count: 10/100
 Unstrip recursion depth: 0/20
-Unstrip post&#8208;expand size: 66650/5000000 bytes
+Unstrip post&#8208;expand size: 66855/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00% 1056.623      1 -total
- 55.43%  585.697     10 Template:Code
-  0.82%    8.624      1 Template:Draft_Tools_navi/de
-  0.69%    7.268      7 Template:RadioButton
-  0.55%    5.857     14 Template:TRUE
-  0.46%    4.907      1 Template:MenuCommand
-  0.44%    4.640     10 Template:CheckBox
-  0.41%    4.372     22 Template:Button
-  0.40%    4.253      1 Template:Macro/de
-  0.39%    4.145     18 Template:FALSE
+100.00%  372.788      1 -total
+  2.57%    9.584      1 Template:Macro/de
+  2.47%    9.200      1 Template:Draft_Tools_navi/de
+  1.96%    7.317      1 Template:Codeextralink
+  1.89%    7.063      7 Template:RadioButton
+  1.55%    5.791     10 Template:Code
+  1.30%    4.829     10 Template:CheckBox
+  1.12%    4.159      3 Template:ColoredText
+  1.03%    3.844      1 Template:Caption
+  0.98%    3.658      2 Template:Navigation_menu_2
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:391903-0!canonical and timestamp 20260121044252 and revision id 1741742. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:391903-0!canonical and timestamp 20260121044519 and revision id 1741744. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
