--- a/wiki/bg/3D_View.html
+++ b/wiki/bg/3D_View.html
@@ -15,7 +15,7 @@
 <p><span id="Introduction"></span>
 </p>
 <h2><span id=".D0.92.D1.8A.D0.B2.D0.B5.D0.B4.D0.B5.D0.BD.D0.B8.D0.B5"></span><span class="mw-headline" id="&#1042;&#1098;&#1074;&#1077;&#1076;&#1077;&#1085;&#1080;&#1077;">&#1042;&#1098;&#1074;&#1077;&#1076;&#1077;&#1085;&#1080;&#1077;</span></h2>
-<p><a class="mw-selflink selflink">3D View</a> &#1074;&#1098;&#1074; FreeCAD &#1077; &#1080;&#1085;&#1090;&#1077;&#1088;&#1092;&#1077;&#1081;&#1089; &#1082;&#1098;&#1084; Coin3D <a href="../Scenegraph.html" title="Scenegraph">scenegraph</a>, &#1082;&#1086;&#1081;&#1090;&#1086; &#1092;&#1086;&#1088;&#1084;&#1080;&#1088;&#1072; &#1085;&#1072;&#1081;-&#1074;&#1072;&#1078;&#1085;&#1080;&#1103;&#1090; &#1087;&#1088;&#1086;&#1079;&#1086;&#1088;&#1077;&#1094; &#1074; <a href="../bg/Interface.html" title="Interface/bg">&#1080;&#1085;&#1090;&#1077;&#1088;&#1092;&#1077;&#1081;&#1089;&#1072;</a>. Coin3D &#1077; &#1073;&#1080;&#1073;&#1083;&#1080;&#1086;&#1090;&#1077;&#1082;&#1072;, &#1082;&#1086;&#1103;&#1090;&#1086; &#1088;&#1077;&#1072;&#1083;&#1080;&#1079;&#1080;&#1088;&#1072; &#1089;&#1090;&#1072;&#1085;&#1076;&#1072;&#1088;&#1090;&#1072; &#1079;&#1072; &#1086;&#1087;&#1080;&#1089;&#1074;&#1072;&#1085;&#1077; &#1085;&#1072; &#1089;&#1094;&#1077;&#1085;&#1080; OpenInventor 2.1.
+<p>3D &#1080;&#1079;&#1075;&#1083;&#1077;&#1076;&#1098;&#1090; (<a class="mw-selflink selflink">3D View</a>) &#1074;&#1098;&#1074; FreeCAD &#1077; &#1080;&#1085;&#1090;&#1077;&#1088;&#1092;&#1077;&#1081;&#1089; &#1082;&#1098;&#1084; Coin3D <a href="../Scenegraph.html" title="Scenegraph">scenegraph</a>, &#1082;&#1086;&#1081;&#1090;&#1086; &#1092;&#1086;&#1088;&#1084;&#1080;&#1088;&#1072; &#1085;&#1072;&#1081;-&#1074;&#1072;&#1078;&#1085;&#1080;&#1103;&#1090; &#1087;&#1088;&#1086;&#1079;&#1086;&#1088;&#1077;&#1094; &#1074; <a href="../bg/Interface.html" title="Interface/bg">&#1080;&#1085;&#1090;&#1077;&#1088;&#1092;&#1077;&#1081;&#1089;&#1072;</a>. Coin3D &#1077; &#1073;&#1080;&#1073;&#1083;&#1080;&#1086;&#1090;&#1077;&#1082;&#1072;, &#1082;&#1086;&#1103;&#1090;&#1086; &#1088;&#1077;&#1072;&#1083;&#1080;&#1079;&#1080;&#1088;&#1072; &#1089;&#1090;&#1072;&#1085;&#1076;&#1072;&#1088;&#1090;&#1072; &#1079;&#1072; &#1086;&#1087;&#1080;&#1089;&#1074;&#1072;&#1085;&#1077; &#1085;&#1072; &#1089;&#1094;&#1077;&#1085;&#1080; OpenInventor 2.1.
 </p><p>&#1053;&#1103;&#1082;&#1086;&#1080; &#1089;&#1074;&#1086;&#1081;&#1089;&#1090;&#1074;&#1072; &#1085;&#1072; &#1080;&#1079;&#1075;&#1083;&#1077;&#1076;&#1072;, &#1082;&#1072;&#1090;&#1086; &#1094;&#1074;&#1103;&#1090; &#1085;&#1072; &#1092;&#1086;&#1085;&#1072;, &#1089;&#1090;&#1080;&#1083;&#1098;&#1090; <a href="../Mouse_navigation.html" title="Mouse navigation">mouse navigation</a> &#1080; &#1089;&#1090;&#1098;&#1087;&#1082;&#1080; &#1079;&#1072; &#1084;&#1072;&#1097;&#1072;&#1073;&#1080;&#1088;&#1072;&#1085;&#1077;, &#1084;&#1086;&#1075;&#1072;&#1090; &#1076;&#1072; &#1073;&#1098;&#1076;&#1072;&#1090; &#1082;&#1086;&#1085;&#1092;&#1080;&#1075;&#1091;&#1088;&#1080;&#1088;&#1072;&#1085;&#1080; &#1089; <a href="../Preferences_Editor.html" title="Preferences Editor">Preferences Editor</a>.
 </p><p><span typeof="mw:File"><a href="../index.php?title=FreeCAD_3D_view.png&amp;filetimestamp=20190921023511&amp;.html" class="mw-file-description"><img src="../File/FreeCAD_3D_view.png" decoding="async" width="600" height="318" class="mw-file-element" data-file-width="890" data-file-height="471"></a></span>
 </p>
@@ -41,7 +41,7 @@
     <div class="NavHead mw-collapsible mw-collapsed" style="margin: 1px; font-weight: normal; background-color: var(--background-color-neutral-subtle, #fefefe);"><span typeof="mw:File"><a href="../index.php?title=Freecad.svg&amp;filetimestamp=20240704193018&amp;.html" class="mw-file-description"><img src="../File/Freecad.svg" decoding="async" width="24" height="24" class="mw-file-element" data-file-width="48" data-file-height="48"></a></span> <a href="../bg/Interface.html" title="Interface/bg">Interface</a>
         <div class="NavContent mw-collapsible-content" style="margin: 10px; border: 1px solid var(--border-color-base, #aaaaaa); text-align: left; border-collapse: collapse; font-weight: normal; font-size: 100%; clear:both; margin-top: 1px; background-color: var(--background-color-neutral-subtle, #fefefe);">
 <ul><li><a href="../bg/Preferences_Editor.html" title="Preferences Editor/bg">Preferences Editor</a>, <a href="../bg/Interface_Customization.html" title="Interface Customization/bg">Interface Customization</a></li>
-<li>Main window: <a href="../index.php?title=Standard_Menu/bg&amp;action=edit&amp;redlink=1.html" class="new" title="Standard Menu/bg (page does not exist)">Standard menu</a>, <a href="../index.php?title=Main_view_area/bg&amp;action=edit&amp;redlink=1.html" class="new" title="Main view area/bg (page does not exist)">Main view area</a>, <a class="mw-selflink selflink">3D View</a>, <a href="../index.php?title=Combo_View/bg&amp;action=edit&amp;redlink=1.html" class="new" title="Combo View/bg (page does not exist)">Combo view</a> (<a href="../index.php?title=Tree_View/bg&amp;action=edit&amp;redlink=1.html" class="new" title="Tree View/bg (page does not exist)">Tree View</a>, <a href="../index.php?title=Task_Panel/bg&amp;action=edit&amp;redlink=1.html" class="new" title="Task Panel/bg (page does not exist)">Task Panel</a>, <a href="../bg/Property_View.html" title="Property View/bg">Property View</a>), <a href="../index.php?title=Selection_view/bg&amp;action=edit&amp;redlink=1.html" class="new" title="Selection view/bg (page does not exist)">Selection view</a>, <a href="../index.php?title=Report_View/bg&amp;action=edit&amp;redlink=1.html" class="new" title="Report View/bg (page does not exist)">Report View</a>, <a href="../index.php?title=Python_Console/bg&amp;action=edit&amp;redlink=1.html" class="new" title="Python Console/bg (page does not exist)">Python console</a>, <a href="../index.php?title=Status_Bar/bg&amp;action=edit&amp;redlink=1.html" class="new" title="Status Bar/bg (page does not exist)">Status Bar</a>, <a href="../index.php?title=DAG_View/bg&amp;action=edit&amp;redlink=1.html" class="new" title="DAG View/bg (page does not exist)">DAG View</a>, <a href="../index.php?title=Std_Workbench/bg&amp;action=edit&amp;redlink=1.html" class="new" title="Std Workbench/bg (page does not exist)">Workbench Selector</a></li>
+<li>Main window: <a href="../index.php?title=Standard_Menu/bg&amp;action=edit&amp;redlink=1.html" class="new" title="Standard Menu/bg (page does not exist)">Standard menu</a>, <a href="../index.php?title=Main_view_area/bg&amp;action=edit&amp;redlink=1.html" class="new" title="Main view area/bg (page does not exist)">Main view area</a>, <a class="mw-selflink selflink">3D View</a>, <a href="../index.php?title=Combo_View/bg&amp;action=edit&amp;redlink=1.html" class="new" title="Combo View/bg (page does not exist)">Combo view</a> (<a href="../bg/Tree_View.html" title="Tree View/bg">Tree View</a>, <a href="../index.php?title=Task_Panel/bg&amp;action=edit&amp;redlink=1.html" class="new" title="Task Panel/bg (page does not exist)">Task Panel</a>, <a href="../bg/Property_View.html" title="Property View/bg">Property View</a>), <a href="../index.php?title=Selection_view/bg&amp;action=edit&amp;redlink=1.html" class="new" title="Selection view/bg (page does not exist)">Selection view</a>, <a href="../index.php?title=Report_View/bg&amp;action=edit&amp;redlink=1.html" class="new" title="Report View/bg (page does not exist)">Report View</a>, <a href="../index.php?title=Python_Console/bg&amp;action=edit&amp;redlink=1.html" class="new" title="Python Console/bg (page does not exist)">Python console</a>, <a href="../index.php?title=Status_Bar/bg&amp;action=edit&amp;redlink=1.html" class="new" title="Status Bar/bg (page does not exist)">Status Bar</a>, <a href="../index.php?title=DAG_View/bg&amp;action=edit&amp;redlink=1.html" class="new" title="DAG View/bg (page does not exist)">DAG View</a>, <a href="../index.php?title=Std_Workbench/bg&amp;action=edit&amp;redlink=1.html" class="new" title="Std Workbench/bg (page does not exist)">Workbench Selector</a></li>
 <li>Auxiliary windows: <a href="../index.php?title=Std_SceneInspector/bg&amp;action=edit&amp;redlink=1.html" class="new" title="Std SceneInspector/bg (page does not exist)">Scene inspector</a>, <a href="../index.php?title=Std_DependencyGraph/bg&amp;action=edit&amp;redlink=1.html" class="new" title="Std DependencyGraph/bg (page does not exist)">Dependency graph</a></li></ul></div>
     </div></div>
 <div class="NavFrame" style="margin: 0px; text-align: center; border-collapse: collapse; font-size: 100%; border-top-style: double; border-top-style: 1px; clear:both;">
@@ -60,12 +60,12 @@
     </div></div>
 <!-- 
 NewPP limit report
-Cached time: 20260117201835
+Cached time: 20260121045403
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.052 seconds
-Real time usage: 0.079 seconds
+CPU time usage: 0.061 seconds
+Real time usage: 0.126 seconds
 Preprocessor visited node count: 136/1000000
 Post&#8208;expand include size: 10408/2097152 bytes
 Template argument size: 3047/2097152 bytes
@@ -76,15 +76,15 @@ Unstrip post&#8208;expand size: 2148/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%   15.162      1 -total
- 46.35%    7.028      1 Template:Interface_navi/bg
- 32.63%    4.947      1 Template:Userdocnavi/bg
- 22.37%    3.392      2 Template:Navigation_menu_2
-  9.75%    1.479      1 Template:Caption
-  8.75%    1.327      1 Template:TOCright
+100.00%   20.513      1 -total
+ 41.18%    8.448      1 Template:Interface_navi/bg
+ 32.24%    6.614      1 Template:Userdocnavi/bg
+ 24.28%    4.980      2 Template:Navigation_menu_2
+ 12.36%    2.536      1 Template:TOCright
+ 11.04%    2.265      1 Template:Caption
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:411520-0!canonical and timestamp 20260117201834 and revision id 1739650. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:411520-0!canonical and timestamp 20260121045403 and revision id 1741746. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
