--- a/wiki/bg/Tree_View.html
+++ b/wiki/bg/Tree_View.html
@@ -64,7 +64,7 @@
 <li><span class="key" style="background: #f9f9f9; -moz-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); -webkit-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); border: 1px solid #888888; border-radius: 0.3em; padding: 0px 5px 1px 5px; color:#202122;">Alt</span>+<span class="key" style="background: #f9f9f9; -moz-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); -webkit-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); border: 1px solid #888888; border-radius: 0.3em; padding: 0px 5px 1px 5px; color:#202122;">Up</span>: &#1056;&#1072;&#1079;&#1075;&#1098;&#1074;&#1072; &#1080;&#1079;&#1073;&#1088;&#1072;&#1085;&#1080;&#1090;&#1077; &#1077;&#1083;&#1077;&#1084;&#1077;&#1085;&#1090;&#1080; &#1089; &#1074;&#1089;&#1080;&#1095;&#1082;&#1080;&#1090;&#1077; &#1080;&#1084; &#1076;&#1077;&#1094;&#1072;, &#1089;&#1075;&#1098;&#1085;&#1072;&#1090;&#1080; &#1076;&#1086; &#1085;&#1080;&#1074;&#1086; 1  (&#1087;&#1086;-&#1076;&#1098;&#1083;&#1073;&#1086;&#1082;&#1080;&#1090;&#1077; &#1076;&#1077;&#1094;&#1072; &#1086;&#1089;&#1090;&#1072;&#1074;&#1072;&#1090; &#1085;&#1077;&#1087;&#1088;&#1086;&#1084;&#1077;&#1085;&#1077;&#1085;&#1080;).</li>
 <li><span class="key" style="background: #f9f9f9; -moz-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); -webkit-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); border: 1px solid #888888; border-radius: 0.3em; padding: 0px 5px 1px 5px; color:#202122;">Alt</span>+<span class="key" style="background: #f9f9f9; -moz-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); -webkit-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); border: 1px solid #888888; border-radius: 0.3em; padding: 0px 5px 1px 5px; color:#202122;">Down</span>: &#1057;&#1075;&#1098;&#1074;&#1072; &#1080;&#1079;&#1073;&#1088;&#1072;&#1085;&#1080;&#1090;&#1077; &#1077;&#1083;&#1077;&#1084;&#1077;&#1085;&#1090;&#1080; &#1089; &#1074;&#1089;&#1080;&#1095;&#1082;&#1080;&#1090;&#1077; &#1080;&#1084; &#1076;&#1077;&#1094;&#1072;, &#1089;&#1075;&#1098;&#1085;&#1072;&#1090;&#1080; &#1076;&#1086; &#1085;&#1080;&#1074;&#1086; 1  (&#1087;&#1086;-&#1076;&#1098;&#1083;&#1073;&#1086;&#1082;&#1080;&#1090;&#1077; &#1076;&#1077;&#1094;&#1072; &#1086;&#1089;&#1090;&#1072;&#1074;&#1072;&#1090; &#1085;&#1077;&#1087;&#1088;&#1086;&#1084;&#1077;&#1085;&#1077;&#1085;&#1080;).</li></ul></li></ul>
 <h2><span class="mw-headline" id="Overlay_icons">Overlay icons</span></h2>
-<p>One or more overlay icons can be displayed on top of an object's default icon in the Tree View. The available overlay icons and their meaning are listed below.
+<p>&#1045;&#1076;&#1085;&#1072; &#1080;&#1083;&#1080; &#1087;&#1086;&#1074;&#1077;&#1095;&#1077; &#1085;&#1072;&#1089;&#1083;&#1072;&#1075;&#1074;&#1072;&#1097;&#1080; &#1089;&#1077; &#1080;&#1082;&#1086;&#1085;&#1080; &#1084;&#1086;&#1075;&#1072;&#1090; &#1076;&#1072; &#1089;&#1077; &#1087;&#1086;&#1082;&#1072;&#1079;&#1074;&#1072;&#1090; &#1074;&#1098;&#1088;&#1093;&#1091; &#1080;&#1082;&#1086;&#1085;&#1072;&#1090;&#1072; &#1087;&#1086; &#1087;&#1086;&#1076;&#1088;&#1072;&#1079;&#1073;&#1080;&#1088;&#1072;&#1085;&#1077; &#1085;&#1072; &#1086;&#1073;&#1077;&#1082;&#1090;&#1072; &#1074; &#1080;&#1079;&#1075;&#1083;&#1077;&#1076;&#1072; &#1085;&#1072; &#1076;&#1098;&#1088;&#1074;&#1086;. &#1053;&#1072;&#1083;&#1080;&#1095;&#1085;&#1080;&#1090;&#1077; &#1085;&#1072;&#1089;&#1083;&#1072;&#1075;&#1074;&#1072;&#1097;&#1080; &#1089;&#1077; &#1080;&#1082;&#1086;&#1085;&#1080; &#1080; &#1090;&#1103;&#1093;&#1085;&#1086;&#1090;&#1086; &#1079;&#1085;&#1072;&#1095;&#1077;&#1085;&#1080;&#1077; &#1089;&#1072; &#1080;&#1079;&#1073;&#1088;&#1086;&#1077;&#1085;&#1080; &#1087;&#1086;-&#1076;&#1086;&#1083;&#1091;.
 </p>
 <h3><span class="mw-headline" id="White_check_mark_on_blue_background"><span class="mw-default-size" typeof="mw:File"><a href="../index.php?title=FreeCAD_Tree_view_recompute.png&amp;filetimestamp=20240413194537&amp;.html" class="mw-file-description"><img src="../File/FreeCAD_Tree_view_recompute.png" decoding="async" width="32" height="32" class="mw-file-element" data-file-width="32" data-file-height="32"></a></span> White check mark on blue background</span></h3>
 <p>This indicates that the object has to be <a href="../Std_Refresh.html" title="Std Refresh">recomputed</a>, due to changes made to the model or because the user marked the object in the Tree View context menu to be recomputed. In most cases recomputes are triggered automatically, but sometimes they are delayed for performance reasons.
@@ -163,12 +163,12 @@
     </div></div>
 <!-- 
 NewPP limit report
-Cached time: 20260118122929
+Cached time: 20260121050702
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.113 seconds
-Real time usage: 0.157 seconds
+CPU time usage: 0.158 seconds
+Real time usage: 0.246 seconds
 Preprocessor visited node count: 753/1000000
 Post&#8208;expand include size: 38475/2097152 bytes
 Template argument size: 12431/2097152 bytes
@@ -179,19 +179,19 @@ Unstrip post&#8208;expand size: 2222/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%   36.414      1 -total
- 25.95%    9.448      1 Template:Std_Base_navi/bg
- 19.46%    7.087      1 Template:Interface_navi/bg
- 18.63%    6.785      3 Template:Navigation_menu_2
- 11.39%    4.148      1 Template:Userdocnavi/bg
-  6.78%    2.470      2 Template:PropertyData
-  5.94%    2.162      1 Template:FALSE
-  4.82%    1.754      1 Template:TOCright
-  4.79%    1.745      5 Template:Version
-  4.67%    1.700     19 Template:KEY
+100.00%   55.927      1 -total
+ 26.21%   14.659      1 Template:Std_Base_navi/bg
+ 22.81%   12.756      3 Template:Navigation_menu_2
+ 15.56%    8.704      1 Template:Interface_navi/bg
+ 11.19%    6.259      1 Template:Userdocnavi/bg
+  8.56%    4.785      2 Template:PropertyData
+  6.09%    3.408      6 Template:MenuCommand
+  5.13%    2.867      3 Template:Variable
+  4.89%    2.734      2 Template:Caption
+  4.49%    2.513     19 Template:KEY
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:411533-0!canonical and timestamp 20260118122929 and revision id 1740441. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:411533-0!canonical and timestamp 20260121050701 and revision id 1741748. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
