--- a/wiki/bg/Tree_View.html
+++ b/wiki/bg/Tree_View.html
@@ -63,7 +63,9 @@
 <li><span class="key" style="background: #f9f9f9; -moz-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); -webkit-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); border: 1px solid #888888; border-radius: 0.3em; padding: 0px 5px 1px 5px; color:#202122;">Alt</span>+<span class="key" style="background: #f9f9f9; -moz-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); -webkit-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); border: 1px solid #888888; border-radius: 0.3em; padding: 0px 5px 1px 5px; color:#202122;">Right</span>: &#1056;&#1072;&#1079;&#1075;&#1098;&#1074;&#1072; &#1080;&#1079;&#1073;&#1088;&#1072;&#1085;&#1080;&#1090;&#1077; &#1072;&#1088;&#1090;&#1080;&#1082;&#1091;&#1083;(&#1080;).</li>
 <li><span class="key" style="background: #f9f9f9; -moz-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); -webkit-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); border: 1px solid #888888; border-radius: 0.3em; padding: 0px 5px 1px 5px; color:#202122;">Alt</span>+<span class="key" style="background: #f9f9f9; -moz-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); -webkit-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); border: 1px solid #888888; border-radius: 0.3em; padding: 0px 5px 1px 5px; color:#202122;">Up</span>: &#1056;&#1072;&#1079;&#1075;&#1098;&#1074;&#1072; &#1080;&#1079;&#1073;&#1088;&#1072;&#1085;&#1080;&#1090;&#1077; &#1077;&#1083;&#1077;&#1084;&#1077;&#1085;&#1090;&#1080; &#1089; &#1074;&#1089;&#1080;&#1095;&#1082;&#1080;&#1090;&#1077; &#1080;&#1084; &#1076;&#1077;&#1094;&#1072;, &#1089;&#1075;&#1098;&#1085;&#1072;&#1090;&#1080; &#1076;&#1086; &#1085;&#1080;&#1074;&#1086; 1  (&#1087;&#1086;-&#1076;&#1098;&#1083;&#1073;&#1086;&#1082;&#1080;&#1090;&#1077; &#1076;&#1077;&#1094;&#1072; &#1086;&#1089;&#1090;&#1072;&#1074;&#1072;&#1090; &#1085;&#1077;&#1087;&#1088;&#1086;&#1084;&#1077;&#1085;&#1077;&#1085;&#1080;).</li>
 <li><span class="key" style="background: #f9f9f9; -moz-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); -webkit-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); border: 1px solid #888888; border-radius: 0.3em; padding: 0px 5px 1px 5px; color:#202122;">Alt</span>+<span class="key" style="background: #f9f9f9; -moz-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); -webkit-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); border: 1px solid #888888; border-radius: 0.3em; padding: 0px 5px 1px 5px; color:#202122;">Down</span>: &#1057;&#1075;&#1098;&#1074;&#1072; &#1080;&#1079;&#1073;&#1088;&#1072;&#1085;&#1080;&#1090;&#1077; &#1077;&#1083;&#1077;&#1084;&#1077;&#1085;&#1090;&#1080; &#1089; &#1074;&#1089;&#1080;&#1095;&#1082;&#1080;&#1090;&#1077; &#1080;&#1084; &#1076;&#1077;&#1094;&#1072;, &#1089;&#1075;&#1098;&#1085;&#1072;&#1090;&#1080; &#1076;&#1086; &#1085;&#1080;&#1074;&#1086; 1  (&#1087;&#1086;-&#1076;&#1098;&#1083;&#1073;&#1086;&#1082;&#1080;&#1090;&#1077; &#1076;&#1077;&#1094;&#1072; &#1086;&#1089;&#1090;&#1072;&#1074;&#1072;&#1090; &#1085;&#1077;&#1087;&#1088;&#1086;&#1084;&#1077;&#1085;&#1077;&#1085;&#1080;).</li></ul></li></ul>
-<h2><span class="mw-headline" id="Overlay_icons">Overlay icons</span></h2>
+<p><span id="Overlay_icons"></span>
+</p>
+<h2><span id=".D0.9D.D0.B0.D1.81.D0.BB.D0.B0.D0.B3.D0.B2.D0.B0.D1.89.D0.B8_.D1.81.D0.B5_.D0.B8.D0.BA.D0.BE.D0.BD.D0.B8"></span><span class="mw-headline" id="&#1053;&#1072;&#1089;&#1083;&#1072;&#1075;&#1074;&#1072;&#1097;&#1080;_&#1089;&#1077;_&#1080;&#1082;&#1086;&#1085;&#1080;">&#1053;&#1072;&#1089;&#1083;&#1072;&#1075;&#1074;&#1072;&#1097;&#1080; &#1089;&#1077; &#1080;&#1082;&#1086;&#1085;&#1080;</span></h2>
 <p>&#1045;&#1076;&#1085;&#1072; &#1080;&#1083;&#1080; &#1087;&#1086;&#1074;&#1077;&#1095;&#1077; &#1085;&#1072;&#1089;&#1083;&#1072;&#1075;&#1074;&#1072;&#1097;&#1080; &#1089;&#1077; &#1080;&#1082;&#1086;&#1085;&#1080; &#1084;&#1086;&#1075;&#1072;&#1090; &#1076;&#1072; &#1089;&#1077; &#1087;&#1086;&#1082;&#1072;&#1079;&#1074;&#1072;&#1090; &#1074;&#1098;&#1088;&#1093;&#1091; &#1080;&#1082;&#1086;&#1085;&#1072;&#1090;&#1072; &#1087;&#1086; &#1087;&#1086;&#1076;&#1088;&#1072;&#1079;&#1073;&#1080;&#1088;&#1072;&#1085;&#1077; &#1085;&#1072; &#1086;&#1073;&#1077;&#1082;&#1090;&#1072; &#1074; &#1080;&#1079;&#1075;&#1083;&#1077;&#1076;&#1072; &#1085;&#1072; &#1076;&#1098;&#1088;&#1074;&#1086;. &#1053;&#1072;&#1083;&#1080;&#1095;&#1085;&#1080;&#1090;&#1077; &#1085;&#1072;&#1089;&#1083;&#1072;&#1075;&#1074;&#1072;&#1097;&#1080; &#1089;&#1077; &#1080;&#1082;&#1086;&#1085;&#1080; &#1080; &#1090;&#1103;&#1093;&#1085;&#1086;&#1090;&#1086; &#1079;&#1085;&#1072;&#1095;&#1077;&#1085;&#1080;&#1077; &#1089;&#1072; &#1080;&#1079;&#1073;&#1088;&#1086;&#1077;&#1085;&#1080; &#1087;&#1086;-&#1076;&#1086;&#1083;&#1091;.
 </p>
 <h3><span class="mw-headline" id="White_check_mark_on_blue_background"><span class="mw-default-size" typeof="mw:File"><a href="../index.php?title=FreeCAD_Tree_view_recompute.png&amp;filetimestamp=20240413194537&amp;.html" class="mw-file-description"><img src="../File/FreeCAD_Tree_view_recompute.png" decoding="async" width="32" height="32" class="mw-file-element" data-file-width="32" data-file-height="32"></a></span> White check mark on blue background</span></h3>
@@ -163,13 +165,13 @@
     </div></div>
 <!-- 
 NewPP limit report
-Cached time: 20260121050702
+Cached time: 20260121051029
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.158 seconds
-Real time usage: 0.246 seconds
-Preprocessor visited node count: 753/1000000
+CPU time usage: 0.144 seconds
+Real time usage: 0.219 seconds
+Preprocessor visited node count: 754/1000000
 Post&#8208;expand include size: 38475/2097152 bytes
 Template argument size: 12431/2097152 bytes
 Highest expansion depth: 7/100
@@ -179,19 +181,19 @@ Unstrip post&#8208;expand size: 2222/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%   55.927      1 -total
- 26.21%   14.659      1 Template:Std_Base_navi/bg
- 22.81%   12.756      3 Template:Navigation_menu_2
- 15.56%    8.704      1 Template:Interface_navi/bg
- 11.19%    6.259      1 Template:Userdocnavi/bg
-  8.56%    4.785      2 Template:PropertyData
-  6.09%    3.408      6 Template:MenuCommand
-  5.13%    2.867      3 Template:Variable
-  4.89%    2.734      2 Template:Caption
-  4.49%    2.513     19 Template:KEY
+100.00%   42.632      1 -total
+ 24.43%   10.413      1 Template:Std_Base_navi/bg
+ 18.78%    8.005      3 Template:Navigation_menu_2
+ 17.56%    7.485      1 Template:Interface_navi/bg
+ 15.69%    6.689      1 Template:Userdocnavi/bg
+  9.67%    4.123      2 Template:PropertyData
+  6.82%    2.909      3 Template:Variable
+  4.82%    2.056      1 Template:PropertyView
+  4.29%    1.830     19 Template:KEY
+  4.16%    1.773      2 Template:Caption
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:411533-0!canonical and timestamp 20260121050701 and revision id 1741748. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:411533-0!canonical and timestamp 20260121051029 and revision id 1741751. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
