--- a/wiki/bg/Tree_View.html
+++ b/wiki/bg/Tree_View.html
@@ -67,8 +67,9 @@
 </p>
 <h2><span id=".D0.9D.D0.B0.D1.81.D0.BB.D0.B0.D0.B3.D0.B2.D0.B0.D1.89.D0.B8_.D1.81.D0.B5_.D0.B8.D0.BA.D0.BE.D0.BD.D0.B8"></span><span class="mw-headline" id="&#1053;&#1072;&#1089;&#1083;&#1072;&#1075;&#1074;&#1072;&#1097;&#1080;_&#1089;&#1077;_&#1080;&#1082;&#1086;&#1085;&#1080;">&#1053;&#1072;&#1089;&#1083;&#1072;&#1075;&#1074;&#1072;&#1097;&#1080; &#1089;&#1077; &#1080;&#1082;&#1086;&#1085;&#1080;</span></h2>
 <p>&#1045;&#1076;&#1085;&#1072; &#1080;&#1083;&#1080; &#1087;&#1086;&#1074;&#1077;&#1095;&#1077; &#1085;&#1072;&#1089;&#1083;&#1072;&#1075;&#1074;&#1072;&#1097;&#1080; &#1089;&#1077; &#1080;&#1082;&#1086;&#1085;&#1080; &#1084;&#1086;&#1075;&#1072;&#1090; &#1076;&#1072; &#1089;&#1077; &#1087;&#1086;&#1082;&#1072;&#1079;&#1074;&#1072;&#1090; &#1074;&#1098;&#1088;&#1093;&#1091; &#1080;&#1082;&#1086;&#1085;&#1072;&#1090;&#1072; &#1087;&#1086; &#1087;&#1086;&#1076;&#1088;&#1072;&#1079;&#1073;&#1080;&#1088;&#1072;&#1085;&#1077; &#1085;&#1072; &#1086;&#1073;&#1077;&#1082;&#1090;&#1072; &#1074; &#1080;&#1079;&#1075;&#1083;&#1077;&#1076;&#1072; &#1085;&#1072; &#1076;&#1098;&#1088;&#1074;&#1086;. &#1053;&#1072;&#1083;&#1080;&#1095;&#1085;&#1080;&#1090;&#1077; &#1085;&#1072;&#1089;&#1083;&#1072;&#1075;&#1074;&#1072;&#1097;&#1080; &#1089;&#1077; &#1080;&#1082;&#1086;&#1085;&#1080; &#1080; &#1090;&#1103;&#1093;&#1085;&#1086;&#1090;&#1086; &#1079;&#1085;&#1072;&#1095;&#1077;&#1085;&#1080;&#1077; &#1089;&#1072; &#1080;&#1079;&#1073;&#1088;&#1086;&#1077;&#1085;&#1080; &#1087;&#1086;-&#1076;&#1086;&#1083;&#1091;.
+</p><p><span id="File:FreeCAD_Tree_view_recompute.png_White_check_mark_on_blue_background"></span>
 </p>
-<h3><span class="mw-headline" id="White_check_mark_on_blue_background"><span class="mw-default-size" typeof="mw:File"><a href="../index.php?title=FreeCAD_Tree_view_recompute.png&amp;filetimestamp=20240413194537&amp;.html" class="mw-file-description"><img src="../File/FreeCAD_Tree_view_recompute.png" decoding="async" width="32" height="32" class="mw-file-element" data-file-width="32" data-file-height="32"></a></span> White check mark on blue background</span></h3>
+<h3><span id=".D0.91.D1.8F.D0.BB.D0.B0_.D0.BE.D1.82.D0.BC.D0.B5.D1.82.D0.BA.D0.B0_.D0.BD.D0.B0_.D1.81.D0.B8.D0.BD_.D1.84.D0.BE.D0.BD"></span><span class="mw-headline" id="&#1041;&#1103;&#1083;&#1072;_&#1086;&#1090;&#1084;&#1077;&#1090;&#1082;&#1072;_&#1085;&#1072;_&#1089;&#1080;&#1085;_&#1092;&#1086;&#1085;"><span class="mw-default-size" typeof="mw:File"><a href="../index.php?title=FreeCAD_Tree_view_recompute.png&amp;filetimestamp=20240413194537&amp;.html" class="mw-file-description"><img src="../File/FreeCAD_Tree_view_recompute.png" decoding="async" width="32" height="32" class="mw-file-element" data-file-width="32" data-file-height="32"></a></span> &#1041;&#1103;&#1083;&#1072; &#1086;&#1090;&#1084;&#1077;&#1090;&#1082;&#1072; &#1085;&#1072; &#1089;&#1080;&#1085; &#1092;&#1086;&#1085;</span></h3>
 <p>This indicates that the object has to be <a href="../Std_Refresh.html" title="Std Refresh">recomputed</a>, due to changes made to the model or because the user marked the object in the Tree View context menu to be recomputed. In most cases recomputes are triggered automatically, but sometimes they are delayed for performance reasons.
 </p>
 <h3><span class="mw-headline" id="White_exclamation_mark_on_red_background"><span class="mw-default-size" typeof="mw:File"><a href="../index.php?title=FreeCAD_Tree_view_error.png&amp;filetimestamp=20240413200438&amp;.html" class="mw-file-description"><img src="../File/FreeCAD_Tree_view_error.png" decoding="async" width="32" height="32" class="mw-file-element" data-file-width="32" data-file-height="32"></a></span> White exclamation mark on red background</span></h3>
@@ -165,13 +166,13 @@
     </div></div>
 <!-- 
 NewPP limit report
-Cached time: 20260121051029
+Cached time: 20260121051124
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.144 seconds
-Real time usage: 0.219 seconds
-Preprocessor visited node count: 754/1000000
+CPU time usage: 0.137 seconds
+Real time usage: 0.189 seconds
+Preprocessor visited node count: 755/1000000
 Post&#8208;expand include size: 38475/2097152 bytes
 Template argument size: 12431/2097152 bytes
 Highest expansion depth: 7/100
@@ -181,19 +182,19 @@ Unstrip post&#8208;expand size: 2222/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%   42.632      1 -total
- 24.43%   10.413      1 Template:Std_Base_navi/bg
- 18.78%    8.005      3 Template:Navigation_menu_2
- 17.56%    7.485      1 Template:Interface_navi/bg
- 15.69%    6.689      1 Template:Userdocnavi/bg
-  9.67%    4.123      2 Template:PropertyData
-  6.82%    2.909      3 Template:Variable
-  4.82%    2.056      1 Template:PropertyView
-  4.29%    1.830     19 Template:KEY
-  4.16%    1.773      2 Template:Caption
+100.00%   45.632      1 -total
+ 18.72%    8.542      1 Template:Std_Base_navi/bg
+ 17.55%    8.008      3 Template:Navigation_menu_2
+ 16.28%    7.428      1 Template:Interface_navi/bg
+ 13.16%    6.004      1 Template:Userdocnavi/bg
+  9.18%    4.187      2 Template:PropertyData
+  7.23%    3.297      2 Template:Caption
+  7.14%    3.259      6 Template:MenuCommand
+  6.21%    2.835      3 Template:Variable
+  5.50%    2.511      5 Template:Version
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:411533-0!canonical and timestamp 20260121051029 and revision id 1741751. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:411533-0!canonical and timestamp 20260121051124 and revision id 1741753. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
