--- a/wiki/bg/Tree_View.html
+++ b/wiki/bg/Tree_View.html
@@ -168,12 +168,12 @@
     </div></div>
 <!-- 
 NewPP limit report
-Cached time: 20260121052716
+Cached time: 20260121052910
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.146 seconds
-Real time usage: 0.237 seconds
+CPU time usage: 0.145 seconds
+Real time usage: 0.191 seconds
 Preprocessor visited node count: 757/1000000
 Post&#8208;expand include size: 38475/2097152 bytes
 Template argument size: 12431/2097152 bytes
@@ -184,19 +184,19 @@ Unstrip post&#8208;expand size: 2222/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%   52.120      1 -total
- 26.00%   13.551      1 Template:Std_Base_navi/bg
- 24.67%   12.856      3 Template:Navigation_menu_2
- 17.04%    8.882      1 Template:Userdocnavi/bg
- 14.91%    7.772      1 Template:Interface_navi/bg
-  7.73%    4.030      6 Template:MenuCommand
-  7.56%    3.939      2 Template:PropertyData
-  4.47%    2.329      2 Template:Caption
-  4.23%    2.206      1 Template:PropertyView
-  4.12%    2.150      3 Template:Variable
+100.00%   42.251      1 -total
+ 20.32%    8.585      1 Template:Std_Base_navi/bg
+ 17.61%    7.442      3 Template:Navigation_menu_2
+ 15.56%    6.574      1 Template:Interface_navi/bg
+ 11.79%    4.982      1 Template:Userdocnavi/bg
+ 10.44%    4.411      2 Template:PropertyData
+  7.27%    3.070      1 Template:FALSE
+  6.89%    2.909     19 Template:KEY
+  6.38%    2.697      3 Template:Variable
+  6.07%    2.566      1 Template:PropertyView
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:411533-0!canonical and timestamp 20260121052715 and revision id 1741767. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:411533-0!canonical and timestamp 20260121052910 and revision id 1741767. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
