Created page with "Това показва потиснат обект от работна маса [[PartDesign_Workbench|PartDesign]]."

--- a/wiki/bg/Tree_View.html
+++ b/wiki/bg/Tree_View.html
@@ -92,7 +92,7 @@
 </p>
 <h3><span id=".D0.A7.D0.B5.D1.80.D0.B2.D0.B5.D0.BD.D0.B0_.D0.BD.D0.B0.D0.BA.D0.BB.D0.BE.D0.BD.D0.B5.D0.BD.D0.B0_.D0.BB.D0.B8.D0.BD.D0.B8.D1.8F"></span><span class="mw-headline" id="&#1063;&#1077;&#1088;&#1074;&#1077;&#1085;&#1072;_&#1085;&#1072;&#1082;&#1083;&#1086;&#1085;&#1077;&#1085;&#1072;_&#1083;&#1080;&#1085;&#1080;&#1103;"><span class="mw-default-size" typeof="mw:File"><a href="../index.php?title=FreeCAD_Tree_view_suppressed.png&amp;filetimestamp=20240413201121&amp;.html" class="mw-file-description"><img src="../File/FreeCAD_Tree_view_suppressed.png" decoding="async" width="32" height="32" class="mw-file-element" data-file-width="32" data-file-height="32"></a></span> &#1063;&#1077;&#1088;&#1074;&#1077;&#1085;&#1072; &#1085;&#1072;&#1082;&#1083;&#1086;&#1085;&#1077;&#1085;&#1072; &#1083;&#1080;&#1085;&#1080;&#1103;</span></h3>
 <p><span style="font-size:small;"><a href="../Release_notes_1.0.html" title="Release notes 1.0">introduced in 1.0</a></span>
-</p><p>This indicates a suppressed <a href="../PartDesign_Workbench.html" title="PartDesign Workbench">PartDesign</a> feature.
+</p><p>&#1058;&#1086;&#1074;&#1072; &#1087;&#1086;&#1082;&#1072;&#1079;&#1074;&#1072; &#1087;&#1086;&#1090;&#1080;&#1089;&#1085;&#1072;&#1090; &#1086;&#1073;&#1077;&#1082;&#1090; &#1086;&#1090; &#1088;&#1072;&#1073;&#1086;&#1090;&#1085;&#1072; &#1084;&#1072;&#1089;&#1072; <a href="../PartDesign_Workbench.html" title="PartDesign Workbench">PartDesign</a>.
 </p>
 <h3><span class="mw-headline" id="White_upwards_curved_arrow"><span class="mw-default-size" typeof="mw:File"><a href="../index.php?title=FreeCAD_Tree_view_link.png&amp;filetimestamp=20241010072353&amp;.html" class="mw-file-description"><img src="../File/FreeCAD_Tree_view_link.png" decoding="async" width="32" height="32" class="mw-file-element" data-file-width="32" data-file-height="32"></a></span> White upwards curved arrow</span></h3>
 <p>This indicates a <a href="../Std_LinkMake.html" title="Std LinkMake">linked</a> object.
@@ -171,12 +171,12 @@
     </div></div>
 <!-- 
 NewPP limit report
-Cached time: 20260121053519
+Cached time: 20260121053655
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.187 seconds
-Real time usage: 0.386 seconds
+CPU time usage: 0.118 seconds
+Real time usage: 0.169 seconds
 Preprocessor visited node count: 759/1000000
 Post&#8208;expand include size: 38475/2097152 bytes
 Template argument size: 12431/2097152 bytes
@@ -187,19 +187,19 @@ Unstrip post&#8208;expand size: 2223/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%  121.111      1 -total
- 30.21%   36.587      1 Template:Std_Base_navi/bg
- 26.98%   32.670      3 Template:Navigation_menu_2
- 13.93%   16.868      2 Template:PropertyData
- 11.95%   14.477      3 Template:Variable
- 10.87%   13.159      1 Template:Interface_navi/bg
- 10.56%   12.793      1 Template:Userdocnavi/bg
-  9.26%   11.212      1 Template:FALSE
-  7.55%    9.141      5 Template:Version
-  4.77%    5.780      2 Template:Caption
+100.00%   35.931      1 -total
+ 24.86%    8.932      1 Template:Std_Base_navi/bg
+ 20.30%    7.296      3 Template:Navigation_menu_2
+ 18.11%    6.508      1 Template:Interface_navi/bg
+ 13.17%    4.731      1 Template:Userdocnavi/bg
+  8.06%    2.897      2 Template:PropertyData
+  6.31%    2.266      6 Template:MenuCommand
+  5.42%    1.946      1 Template:PropertyView
+  5.13%    1.843      3 Template:Variable
+  4.60%    1.654     19 Template:KEY
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:411533-0!canonical and timestamp 20260121053519 and revision id 1741780. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:411533-0!canonical and timestamp 20260121053655 and revision id 1741783. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
