Created page with "*ver 0.22f 2025/09/25 : ritorno a PySide, aggiungendo informazioni per utilizzare il font MONOSPACE"

--- a/wiki/it/Macro_FCCircularText.html
+++ b/wiki/it/Macro_FCCircularText.html
@@ -1,5 +1,5 @@
 <link href="../site.css" rel="stylesheet" type="text/css"/><div class="mw-page-container"><h1 id="firstHeading" class="firstHeading mw-first-heading"><span class="mw-page-title-main">Macro FCCircularText/it</span></h1><?xml encoding="UTF-8"><div class="mw-content-ltr mw-parser-output" lang="it" dir="ltr"><div class="mw-pt-languages noprint navigation-not-searchable" lang="en" dir="ltr"><div class="mw-pt-languages-label">Other languages:</div><ul class="mw-pt-languages-list"><li><a href="../index.php?title=Special;Translate&amp;group=page-Macro+FCCircularText&amp;language=&amp;task=view.html" class="new" title="Start translation for this language" lang="" dir="ltr"></a></li>
-<li><a href="../de/Macro_FCCircularText.html" class="mw-pt-progress mw-pt-progress--high" title="Makro FC Zirkul&auml;rer Text (95% translated)" lang="de" dir="ltr">Deutsch</a></li>
+<li><a href="../de/Macro_FCCircularText.html" class="mw-pt-progress mw-pt-progress--complete" title="Makro FC Zirkul&auml;rer Text (100% translated)" lang="de" dir="ltr">Deutsch</a></li>
 <li><a href="../Macro_FCCircularText.html" class="mw-pt-languages-ui mw-pt-progress mw-pt-progress--complete" title="Macro FCCircularText (100% translated)" lang="en" dir="ltr">English</a></li>
 <li><a href="../es/Macro_FCCircularText.html" class="mw-pt-progress mw-pt-progress--med" title="Macro FCCircularText/es (33% translated)" lang="es" dir="ltr">espa&ntilde;ol</a></li>
 <li><a href="../fr/Macro_FCCircularText.html" class="mw-pt-progress mw-pt-progress--complete" title="Macro CircularText (100% translated)" lang="fr" dir="ltr">fran&ccedil;ais</a></li>
@@ -773,9 +773,7 @@ Modalit&agrave; rilievo:
 </p><p><span id="Change_log"></span>
 </p>
 <h2><span class="mw-headline" id="Registro_delle_modifiche:">Registro delle modifiche:</span></h2>
-<div lang="en" dir="ltr" class="mw-content-ltr">
-<ul><li>ver 0.22f 2025/09/25&nbsp;: return to PySide , adding info for use the MONOSPACE font</li></ul>
-</div>
+<ul><li>ver 0.22f 2025/09/25&nbsp;: ritorno a PySide, aggiungendo informazioni per utilizzare il font MONOSPACE</li></ul>
 <ul><li>ver 0.22e 2024/07/11&nbsp;: eliminato <b>"ss.support = None"</b></li></ul>
 <ul><li>ver 0.22d 2024/07/11&nbsp;: eliminato <b>"import WebGui"</b> causave errore in 0.22xxx FC e rimpiazzato da <b>"import webbrowser"</b></li></ul>
 <ul><li>ver 0.22c 2023/11/17&nbsp;: adding restore selection after delete the last object , by TheMarkster , thanks</li></ul>
@@ -956,35 +954,35 @@ Modalit&agrave; rilievo:
     </div></div>
 <!-- 
 NewPP limit report
-Cached time: 20260118192940
+Cached time: 20260121081137
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.502 seconds
-Real time usage: 3.108 seconds
-Preprocessor visited node count: 1651/1000000
+CPU time usage: 0.530 seconds
+Real time usage: 2.213 seconds
+Preprocessor visited node count: 1650/1000000
 Post&#8208;expand include size: 41051/2097152 bytes
 Template argument size: 12614/2097152 bytes
 Highest expansion depth: 6/100
 Expensive parser function count: 10/100
 Unstrip recursion depth: 0/20
-Unstrip post&#8208;expand size: 66756/5000000 bytes
+Unstrip post&#8208;expand size: 66761/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00% 1635.985      1 -total
-  3.06%   50.081      2 Template:Navigation_menu_2
-  2.78%   45.487      1 Template:Draft_Tools_navi/it
-  2.18%   35.737      1 Template:Userdocnavi/it
-  1.70%   27.877      1 Template:Caption
-  1.31%   21.385     10 Template:Code
-  1.30%   21.253     10 Template:CheckBox
-  1.22%   20.012     19 Template:Clear
-  1.08%   17.698     14 Template:Incode
-  1.06%   17.266      1 Template:Macro/it
+100.00% 1827.339      1 -total
+ 57.57% 1052.043     10 Template:Code
+  0.60%   10.888      1 Template:Draft_Tools_navi/it
+  0.52%    9.557     19 Template:Clear
+  0.33%    6.079      3 Template:ColoredText
+  0.31%    5.607     14 Template:TRUE
+  0.29%    5.329     10 Template:CheckBox
+  0.26%    4.756      1 Template:Codeextralink
+  0.26%    4.705     22 Template:Button
+  0.26%    4.675      1 Template:Userdocnavi/it
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:39644-0!canonical and timestamp 20260118192940 and revision id 1739695. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:39644-0!canonical and timestamp 20260121081134 and revision id 1741793. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
