Updated page Macro FCCircularText/it

--- a/wiki/it/Macro_FCCircularText.html
+++ b/wiki/it/Macro_FCCircularText.html
@@ -823,9 +823,7 @@ Modalit&agrave; rilievo:
 <span class="n">Coin</span> <span class="n">version</span><span class="p">:</span> <span class="mf">4.0.0</span><span class="n">a</span>
 <span class="n">OCC</span> <span class="n">version</span><span class="p">:</span> <span class="mf">7.3.0</span>
 </pre></div>
-<div class="mw-translate-fuzzy">
-<ul><li>ver 0.14-2 2019/07/22 replace chr(176) (give error &lt;FC 0.18) and replace with the wmayer code, see <a rel="nofollow" class="external text" href="https://forum.freecadweb.org/viewtopic.php?f=13&amp;t=36380&amp;p=308476#p308357">Fehler in Version 0.19 pre&nbsp;??</a></li></ul>
-</div>
+<ul><li>ver 0.14-2 2019/07/22 replace chr(176) (emissione errore per &lt;FC 0.18) e sostituito con il codice wmayer, vedere <a rel="nofollow" class="external text" href="https://forum.freecad.org/viewtopic.php?f=13&amp;t=36380&amp;p=308476#p308357">Fehler in Version 0.19 pre&nbsp;??</a></li></ul>
 <pre>       carDegrees = b' \xc2\xb0'.decode("utf-8")    #thanks wmayer	<a rel="nofollow" class="external free" href="https://forum.freecad.org/viewtopic.php?f=13&amp;t=36380&amp;p=308476#p308357">https://forum.freecad.org/viewtopic.php?f=13&amp;t=36380&amp;p=308476#p308357</a>
        self.DS_InclinaisonX.setSuffix(carDegrees)
        self.DS_InclinaisonY.setSuffix(carDegrees)
@@ -952,13 +950,13 @@ Modalit&agrave; rilievo:
     </div></div>
 <!-- 
 NewPP limit report
-Cached time: 20260121081203
+Cached time: 20260121081310
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.474 seconds
-Real time usage: 0.551 seconds
-Preprocessor visited node count: 1649/1000000
+CPU time usage: 0.446 seconds
+Real time usage: 0.646 seconds
+Preprocessor visited node count: 1648/1000000
 Post&#8208;expand include size: 41050/2097152 bytes
 Template argument size: 12613/2097152 bytes
 Highest expansion depth: 6/100
@@ -968,19 +966,19 @@ Unstrip post&#8208;expand size: 66761/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%  324.148      1 -total
-  2.96%    9.610      1 Template:Draft_Tools_navi/it
-  2.60%    8.440     10 Template:CheckBox
-  2.03%    6.569     10 Template:Code
-  1.88%    6.109      2 Template:Navigation_menu_2
-  1.85%    5.990      1 Template:Userdocnavi/it
-  1.35%    4.366      1 Template:Macro/it
-  1.31%    4.233      7 Template:RadioButton
-  1.29%    4.189      3 Template:ColoredText
-  1.07%    3.453     22 Template:Button
+100.00%  437.468      1 -total
+  3.32%   14.530      1 Template:Draft_Tools_navi/it
+  2.70%   11.794      1 Template:Userdocnavi/it
+  1.60%    7.011      2 Template:Navigation_menu_2
+  1.39%    6.070     10 Template:Code
+  0.77%    3.378     10 Template:CheckBox
+  0.75%    3.268      7 Template:RadioButton
+  0.69%    3.037      3 Template:ColoredText
+  0.62%    2.722      6 Template:SpinBox
+  0.51%    2.212      1 Template:Macro/it
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:39644-0!canonical and timestamp 20260121081202 and revision id 1741795. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:39644-0!canonical and timestamp 20260121081310 and revision id 1741797. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
