Updated page Macro FCCircularText/it

--- a/wiki/it/Macro_FCCircularText.html
+++ b/wiki/it/Macro_FCCircularText.html
@@ -16,7 +16,7 @@ Testo Circolare
 <th class="ctOdd">Descrizione
 </th></tr>
 <tr>
-<td class="ctEven left macro-description">Questa macro utilizza lo strumento <a href="../Draft_ShapeString.html" title="Draft ShapeString">Draft ShapeString</a> per creare una riga di testo posizionata con diversi orientamenti circolari, inclusi circonferenza ed elicoidale (alla maniera di una colonna Traiana). Pu&ograve; anche essere usata per creare un quadrante di orologio con numeri arabi <i>1, 2, 3,</i> ecc., o numeri romani <i>I, II, III,</i> ecc.<br><br>Versione macro: 0.22e<br>Ultima modifica: 2024/07/11<br>Versione FreeCAD: 0.19 &egrave; pi&ugrave;<br>Download: <a rel="nofollow" class="external text" href="https://www.freecad.org/wiki/images/c/c1/FCCircularTextButtom.png">ToolBar Icon</a><br>Autore: Mario52<br>
+<td class="ctEven left macro-description">Questa macro utilizza lo strumento <a href="../Draft_ShapeString.html" title="Draft ShapeString">Draft ShapeString</a> per creare una riga di testo posizionata con diversi orientamenti circolari, inclusi circonferenza ed elica (alla maniera di una colonna Traiana). Pu&ograve; anche essere usata per creare un quadrante di orologio con numeri arabi <i>1, 2, 3,</i> ecc., o numeri romani <i>I, II, III,</i> ecc.<br><br>Versione macro: 0.22e<br>Ultima modifica: 2024/07/11<br>Versione FreeCAD: 0.19 &egrave; pi&ugrave;<br>Download: <a rel="nofollow" class="external text" href="https://www.freecad.org/wiki/images/c/c1/FCCircularTextButtom.png">ToolBar Icon</a><br>Autore: Mario52<br>
 </td></tr>
 <tr>
 <th class="ctOdd">Autore
@@ -944,15 +944,15 @@ Modalit&agrave; rilievo:
     </div></div>
 <!-- 
 NewPP limit report
-Cached time: 20260121081458
+Cached time: 20260121081539
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.446 seconds
-Real time usage: 0.582 seconds
+CPU time usage: 0.452 seconds
+Real time usage: 0.572 seconds
 Preprocessor visited node count: 1646/1000000
-Post&#8208;expand include size: 41057/2097152 bytes
-Template argument size: 12620/2097152 bytes
+Post&#8208;expand include size: 41052/2097152 bytes
+Template argument size: 12615/2097152 bytes
 Highest expansion depth: 6/100
 Expensive parser function count: 10/100
 Unstrip recursion depth: 0/20
@@ -960,19 +960,19 @@ Unstrip post&#8208;expand size: 66764/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%  341.296      1 -total
-  4.52%   15.419      1 Template:Draft_Tools_navi/it
-  2.25%    7.686      7 Template:RadioButton
-  2.06%    7.042      2 Template:Navigation_menu_2
-  1.93%    6.590      1 Template:Userdocnavi/it
-  1.56%    5.336     10 Template:Code
-  1.51%    5.152      1 Template:Macro/it
-  1.31%    4.472     10 Template:CheckBox
-  1.21%    4.117      3 Template:ColoredText
-  1.10%    3.765      1 Template:Emphasis
+100.00%  332.459      1 -total
+  2.65%    8.802      1 Template:Draft_Tools_navi/it
+  2.19%    7.294      1 Template:Userdocnavi/it
+  1.59%    5.275      2 Template:Navigation_menu_2
+  1.57%    5.208     10 Template:CheckBox
+  1.38%    4.572     10 Template:Code
+  1.29%    4.301     22 Template:Button
+  1.25%    4.158      7 Template:RadioButton
+  1.24%    4.108      1 Template:Caption
+  1.20%    3.975      6 Template:SpinBox
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:39644-0!canonical and timestamp 20260121081457 and revision id 1741803. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:39644-0!canonical and timestamp 20260121081539 and revision id 1741805. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
