Updated page Macro MeasureCircle/it

--- a/wiki/it/Macro_MeasureCircle.html
+++ b/wiki/it/Macro_MeasureCircle.html
@@ -1,14 +1,13 @@
 <link href="../site.css" rel="stylesheet" type="text/css"/><div class="mw-page-container"><h1 id="firstHeading" class="firstHeading mw-first-heading"><span class="mw-page-title-main">Macro MeasureCircle/it</span></h1><?xml encoding="UTF-8"><div class="mw-content-ltr mw-parser-output" lang="it" dir="ltr"><div class="mw-pt-languages noprint navigation-not-searchable" lang="en" dir="ltr"><div class="mw-pt-languages-label">Other languages:</div><ul class="mw-pt-languages-list"><li><a href="../index.php?title=Special;Translate&amp;group=page-Macro+MeasureCircle&amp;language=&amp;task=view.html" class="new" title="Start translation for this language" lang="" dir="ltr"></a></li>
-<li><a href="../de/Macro_MeasureCircle.html" class="mw-pt-progress mw-pt-progress--med" title="Makro Kreis messen (33% translated)" lang="de" dir="ltr">Deutsch</a></li>
+<li><a href="../de/Macro_MeasureCircle.html" class="mw-pt-progress mw-pt-progress--complete" title="Makro Kreis messen (100% translated)" lang="de" dir="ltr">Deutsch</a></li>
 <li><a href="../Macro_MeasureCircle.html" class="mw-pt-languages-ui mw-pt-progress mw-pt-progress--complete" title="Macro MeasureCircle (100% translated)" lang="en" dir="ltr">English</a></li>
-<li><a href="../fr/Macro_MeasureCircle.html" class="mw-pt-progress mw-pt-progress--med" title="Macro MeasureCircle (33% translated)" lang="fr" dir="ltr">fran&ccedil;ais</a></li>
+<li><a href="../fr/Macro_MeasureCircle.html" class="mw-pt-progress mw-pt-progress--complete" title="Macro MeasureCircle (100% translated)" lang="fr" dir="ltr">fran&ccedil;ais</a></li>
 <li><span class="mw-pt-languages-selected mw-pt-progress mw-pt-progress--med" lang="it" dir="ltr">italiano</span></li>
 <li><a href="../pl/Macro_MeasureCircle.html" class="mw-pt-progress mw-pt-progress--low" title="Makrodefinicja: Oblicz promie&#324; (8% translated)" lang="pl" dir="ltr">polski</a></li></ul></div>
-<div class="mw-translate-fuzzy">
 <table class="fcinfobox wikitable ct" width="100%" style="float: right; width: 230px; margin-left: 10px;">
 <tbody><tr>
 <td class="ctTitle" style="font-weight: bold; font-size: 125%;">
-<p><span typeof="mw:File"><a href="../index.php?title=Macro_MeasureCircle.png&amp;filetimestamp=20160408193149&amp;.html" class="mw-file-description"><img src="../File/Macro_MeasureCircle.png" decoding="async" width="32" height="32" class="mw-file-element"></a></span><span> </span>
+<p><span typeof="mw:File"><a href="../index.php?title=Macro_MeasureCircle.png&amp;filetimestamp=20160408193149&amp;.html" class="mw-file-description"><img src="../File/Macro_MeasureCircle.png" decoding="async" width="32" height="32" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span><span> </span>
 Misura cerchio
 </p>
 </td></tr>
@@ -16,7 +15,7 @@ Misura cerchio
 <th class="ctOdd">Descrizione
 </th></tr>
 <tr>
-<td class="ctEven left macro-description">Calcola il raggio di un cerchio da 3 punti o da uno spigolo circolare<br><br>Versione macro: 1.0<br>Ultima modifica: 2016-04-08<br>Versione FreeCAD: All<br>Download: <a rel="nofollow" class="external text" href="https://www.freecadweb.org/wiki/images/b/bd/Macro_MeasureCircle.png">ToolBar Icon</a><br>Autore: galou_breizh<br>
+<td class="ctEven left macro-description">Calcola il raggio di un cerchio da 3 punti o da uno spigolo circolare<br><br>Versione macro: 1.0<br>Ultima modifica: 2016-04-08<br>Versione FreeCAD: All<br>Download: <a rel="nofollow" class="external text" href="https://www.freecad.org/wiki/images/b/bd/Macro_MeasureCircle.png">ToolBar Icon</a><br>Autore: galou_breizh<br>
 </td></tr>
 <tr>
 <th class="ctOdd">Autore
@@ -28,7 +27,7 @@ Misura cerchio
 <th class="ctOdd">Download
 </th></tr>
 <tr>
-<td class="ctEven macro-download"><a rel="nofollow" class="external text" href="https://www.freecadweb.org/wiki/images/b/bd/Macro_MeasureCircle.png">ToolBar Icon</a>
+<td class="ctEven macro-download"><a rel="nofollow" class="external text" href="https://www.freecad.org/wiki/images/b/bd/Macro_MeasureCircle.png">ToolBar Icon</a>
 </td></tr>
 <tr>
 <th class="ctOdd">Link
@@ -73,7 +72,6 @@ Misura cerchio
 <td class="ctToc"><br><meta property="mw:PageProp/toc">
 </td></tr>
 </tbody></table>
-</div>
 <p><span id="Description"></span>
 </p>
 <h2><span class="mw-headline" id="Descrizione">Descrizione</span></h2>
@@ -116,9 +114,7 @@ webbrowser.open("https://raw.githubusercontent.com/FreeCAD/FreeCAD-macros/master
 <p><br>
 <span id="Usage"></span>
 </p>
-<div class="mw-translate-fuzzy">
-<h2><span class="mw-headline" id="Uso">Uso</span></h2>
-</div>
+<h2><span class="mw-headline" id="Utilizzo">Utilizzo</span></h2>
 <div class="mw-translate-fuzzy">
 <p>Copiare la macro nella propria cartella delle macro ed eseguirla (per maggiori dettagli vedere <a href="../it/How_to_install_macros.html" title="How to install macros/it">Come installare le macro</a>).
 </p>
@@ -145,7 +141,7 @@ Se non ci sono abbastanza elementi selezionati prima di lanciare la macro, &egra
 <p>L'ultima versione della macro si trova in <a rel="nofollow" class="external text" href="https://raw.githubusercontent.com/FreeCAD/FreeCAD-macros/master/Information/MeasureCircle.FCMacro">MeasureCircle.FCMacro</a> ma il modo pi&ugrave; semplice per installare questa macro &egrave; tramite <a href="../it/Std_AddonMgr.html" title="Std AddonMgr/it">Addon Manager</a>.
 </p>
 <div lang="en" dir="ltr" class="mw-content-ltr">
-<p>ToolBar Icon <span class="mw-default-size" typeof="mw:File"><a href="../index.php?title=Macro_MeasureCircle.png&amp;filetimestamp=20160408193149&amp;.html" class="mw-file-description"><img src="../File/Macro_MeasureCircle.png" decoding="async" width="64" height="64" class="mw-file-element"></a></span>
+<p>ToolBar Icon <span class="mw-default-size" typeof="mw:File"><a href="../index.php?title=Macro_MeasureCircle.png&amp;filetimestamp=20160408193149&amp;.html" class="mw-file-description"><img src="../File/Macro_MeasureCircle.png" decoding="async" width="64" height="64" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span>
 </p>
 </div>
 <p><b>Macro_MeasureCircle.FCMacro</b>
@@ -153,29 +149,29 @@ Se non ci sono abbastanza elementi selezionati prima di lanciare la macro, &egra
 <div style="clear:both"></div>
 <!-- 
 NewPP limit report
-Cached time: 20250712190355
+Cached time: 20260121081842
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.022 seconds
-Real time usage: 0.029 seconds
-Preprocessor visited node count: 106/1000000
-Post&#8208;expand include size: 2608/2097152 bytes
-Template argument size: 873/2097152 bytes
+CPU time usage: 0.044 seconds
+Real time usage: 0.214 seconds
+Preprocessor visited node count: 104/1000000
+Post&#8208;expand include size: 2599/2097152 bytes
+Template argument size: 864/2097152 bytes
 Highest expansion depth: 5/100
 Expensive parser function count: 0/100
 Unstrip recursion depth: 0/20
-Unstrip post&#8208;expand size: 2046/5000000 bytes
+Unstrip post&#8208;expand size: 2058/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%    4.409      1 -total
- 44.97%    1.983      1 Template:Macro/it
- 32.09%    1.415      1 Template:Codeextralink
- 18.96%    0.836      1 Template:Clear
+100.00%   50.070      1 -total
+ 53.28%   26.676      1 Template:Codeextralink
+ 26.67%   13.352      1 Template:Macro/it
+ 17.77%    8.898      1 Template:Clear
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:67638-0!canonical and timestamp 20250712190355 and revision id 1611220. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:67638-0!canonical and timestamp 20260121081842 and revision id 1741811. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
