Updated page Macro FreeCAD to Kerkythea/it

--- a/wiki/it/Macro_FreeCAD_to_Kerkythea.html
+++ b/wiki/it/Macro_FreeCAD_to_Kerkythea.html
@@ -75,16 +75,12 @@ FC in Kerkythea
 <p><span id="Description"></span>
 </p>
 <h2><span class="mw-headline" id="Descrizione">Descrizione</span></h2>
-<div class="mw-translate-fuzzy">
-<h2><span class="mw-headline" id="Descrizione_2">Descrizione</span></h2>
 <p>Macro per esportare il proprio modello nel programma di raytracing <a rel="nofollow" class="external text" href="http://www.kerkythea.net/cms/">Kerkythea</a>.
+</p><p><span id="Usage"></span>
 </p>
-</div>
-<div lang="en" dir="ltr" class="mw-content-ltr">
-<h2><span class="mw-headline" id="Usage">Usage</span></h2>
-</div>
-<div class="mw-translate-fuzzy">
 <h2><span class="mw-headline" id="Utilizzo">Utilizzo</span></h2>
+<div class="mw-translate-fuzzy">
+<h2><span class="mw-headline" id="Utilizzo_2">Utilizzo</span></h2>
 <p>La macro &egrave; disponibile nel seguente repository github: <a rel="nofollow" class="external text" href="https://github.com/marmni/FreeCAD-Kerkythea">FreeCAD to Kerkythea-Exporter</a>
 </p>
 </div>
@@ -679,13 +675,13 @@ exportKerkythea().exec_()</pre>
 <div style="clear:both"></div>
 <!-- 
 NewPP limit report
-Cached time: 20260121084937
+Cached time: 20260121084950
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.039 seconds
-Real time usage: 0.080 seconds
-Preprocessor visited node count: 107/1000000
+CPU time usage: 0.037 seconds
+Real time usage: 0.085 seconds
+Preprocessor visited node count: 103/1000000
 Post&#8208;expand include size: 2040/2097152 bytes
 Template argument size: 24301/2097152 bytes
 Highest expansion depth: 5/100
@@ -695,13 +691,13 @@ Unstrip post&#8208;expand size: 25386/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%   14.516      1 -total
- 47.72%    6.927      1 Template:Macro/it
- 32.48%    4.715      1 Template:MacroCode
- 17.67%    2.565      1 Template:Clear
+100.00%   17.468      1 -total
+ 43.43%    7.586      1 Template:Clear
+ 36.77%    6.423      1 Template:Macro/it
+ 18.21%    3.181      1 Template:MacroCode
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:59530-0!canonical and timestamp 20260121084937 and revision id 1741827. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:59530-0!canonical and timestamp 20260121084950 and revision id 1741831. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
